--- a/app/src/main/res/layout/first_page.xml
+++ b/app/src/main/res/layout/first_page.xml
@@ -68,12 +68,14 @@
         android:id="@+id/text_destination"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView3"
-        android:layout_centerHorizontal="true"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Your destination"
-        android:textColor="#4a4a4a" />
+        android:textColor="#4a4a4a"
+        android:layout_below="@+id/textView3"
+        android:layout_toRightOf="@+id/textView4"
+        android:layout_alignRight="@+id/textView3"
+        android:layout_alignEnd="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView3"
@@ -95,7 +97,7 @@
         android:textSize="18sp"
         android:layout_alignBaseline="@+id/text_destination"
         android:layout_alignBottom="@+id/text_destination"
-        android:layout_toLeftOf="@+id/text_destination"
-        android:layout_toStartOf="@+id/text_destination" />
+        android:layout_alignLeft="@+id/textView3"
+        android:layout_alignStart="@+id/textView3" />
 
 </RelativeLayout>
