--- a/app/src/main/res/layout/route_row.xml
+++ b/app/src/main/res/layout/route_row.xml
@@ -1,169 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="7dp"
 
-    android:layout_marginBottom="20dp">
+    >
 
-    <LinearLayout
+    <android.support.v7.widget.LinearLayoutCompat
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:weightSum="0"
+        app:divider="@drawable/vseparator"
+        app:showDividers="middle">
 
 
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-
-
-                <TextView
-                    android:id="@+id/post_RID"
-                    android:layout_width="70dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:paddingBottom="7dp"
-                    android:paddingLeft="15dp"
-                    android:paddingTop="7dp"
-                    android:text="RID"
-                    android:textColor="#221815"
-                    android:textSize="16dp"
-                    android:textStyle="bold"
-                    android:background="@color/colorAccent"/>
-
-                <TextView
-
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
-
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:background="@color/colorAccent"
-                    android:gravity="center"
-                    android:paddingBottom="7dp"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:paddingTop="7dp"
-                    android:text="Time (mins) "
-                    android:textColor="@android:color/background_light" />
-
-                <TextView
-
-                    android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
-
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:background="@color/colorAccent"
-                    android:gravity="center"
-                    android:paddingBottom="7dp"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:paddingTop="7dp"
-                    android:text="Cost ($)"
-                    android:textColor="@android:color/background_light" />
-
-                <TextView
-
-                    android:id="@+id/textView7"
-                    android:layout_width="wrap_content"
-
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:background="@color/colorAccent"
-                    android:gravity="center"
-                    android:paddingBottom="7dp"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:paddingTop="7dp"
-                    android:text="Walking Distance (m)"
-                    android:textColor="@android:color/background_light" />
+        <TextView
+            android:id="@+id/post_transport"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/post_distance"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingBottom="7dp"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+            android:paddingTop="7dp"
+            android:text="XX"
+            android:textColor="#221815"
+            app:divider="@drawable/vseparator" />
 
 
-            </TableRow>
+        <TextView
+            android:id="@+id/post_time"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingBottom="7dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="7dp"
+            android:text="XX"
+            android:textColor="#221815"
+            app:divider="@drawable/vseparator" />
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+        <TextView
+            android:id="@+id/post_cost"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingBottom="7dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="7dp"
+            android:text="XXX"
+            android:textColor="#221815"
+            app:divider="@drawable/vseparator" />
 
-                    <TextView
-                        android:id="@+id/post_transport"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_below="@+id/post_distance"
-                        android:gravity="center"
-                        android:text="XX"
-                        android:textColor="#221815" />
-
-                    <ImageView
-                        android:id="@+id/image_transport"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|center_horizontal|center" />
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/post_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-
-                    android:layout_weight="2"
-                    android:gravity="center"
-                    android:paddingBottom="7dp"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                    android:paddingTop="7dp"
-                    android:text="XX"
-                    android:textColor="#221815" />
-
-                <TextView
-                    android:id="@+id/post_cost"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-
-                    android:gravity="center"
-                    android:paddingBottom="7dp"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                    android:paddingTop="7dp"
-                    android:text="XXX"
-                    android:textColor="#221815" />
-
-                <TextView
-                    android:id="@+id/post_distance"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-
-                    android:layout_weight="2"
-                    android:gravity="center"
-                    android:paddingBottom="7dp"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                    android:paddingTop="7dp"
-                    android:text="post distance "
-                    android:textColor="#221815" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-
-            </TableRow>
-
-        </TableLayout>
+        <TextView
+            android:id="@+id/post_distance"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1.5"
+            android:gravity="center"
+            android:paddingBottom="7dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="7dp"
+            android:text="post distance "
+            android:textColor="#221815"
+            app:divider="@drawable/vseparator" />
 
 
-    </LinearLayout>
+    </android.support.v7.widget.LinearLayoutCompat>
 
 
 </android.support.v7.widget.CardView>
