--- a/app/src/main/res/layout/view_route.xml
+++ b/app/src/main/res/layout/view_route.xml
@@ -3,10 +3,105 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_height="match_parent"
+
+    <Spinner
+        android:id="@+id/spinner"
         android:layout_width="match_parent"
-        android:id="@+id/route_text"></android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="7dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="7dp"
+        />
+
+
+    <LinearLayout
+        android:id="@+id/ll1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/spinner"
+        android:layout_marginTop="7dp"
+        android:orientation="horizontal"
+        android:weightSum="0">
+
+        <TextView
+            android:id="@+id/post_RID"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:gravity="center"
+            android:paddingBottom="7dp"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+            android:paddingTop="7dp"
+            android:text="Route"
+            android:textColor="#221815"
+            android:textSize="16dp"
+            android:textStyle="bold" />
+
+        <TextView
+
+            android:id="@+id/textView5"
+            android:layout_width="0dp"
+
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:gravity="center"
+            android:paddingBottom="7dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="7dp"
+            android:text="Time (mins) "
+            android:textColor="@android:color/background_light" />
+
+        <TextView
+
+            android:id="@+id/textView6"
+            android:layout_width="0dp"
+
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:gravity="center"
+            android:paddingBottom="7dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="7dp"
+            android:text="Cost ($)"
+            android:textColor="@android:color/background_light" />
+
+        <TextView
+
+            android:id="@+id/textView7"
+            android:layout_width="0dp"
+
+            android:layout_height="match_parent"
+            android:layout_weight="1.5"
+            android:background="@color/colorAccent"
+            android:gravity="center"
+            android:paddingBottom="7dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="7dp"
+            android:text="Walking Distance (m)"
+            android:textColor="@android:color/background_light" />
+    </LinearLayout>
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/route_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/ll1">
+
+
+    </android.support.v7.widget.RecyclerView>
 
 
 </RelativeLayout>
