--- a/app/src/main/res/layout/select_hotel.xml
+++ b/app/src/main/res/layout/select_hotel.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/edtSearch"
+        android:id="@+id/etSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Search..."
@@ -15,13 +15,13 @@
         android:textColor="#221815"/>
 
     <ListView
-        android:id="@+id/lstSearch"
+        android:id="@+id/ltSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/edtSearch"></ListView>
+        android:layout_below="@+id/etSearch"></ListView>
 
 </RelativeLayout>
 
