--- a/app/src/main/res/layout/select_hotel.xml
+++ b/app/src/main/res/layout/select_hotel.xml
@@ -21,7 +21,7 @@
         android:padding="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/etSearch"></ListView>
+        android:layout_below="@+id/etSearch"/>
 
 </RelativeLayout>
 
