--- a/app/src/main/res/layout/route_row.xml
+++ b/app/src/main/res/layout/route_row.xml
@@ -29,7 +29,7 @@
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
             android:paddingTop="7dp"
-            android:text="XX"
+            android:text="taxi"
             android:textColor="#221815"
             app:divider="@drawable/vseparator" />
 
@@ -45,9 +45,10 @@
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:paddingTop="7dp"
-            android:text="XX"
+            android:text="pt "
             android:textColor="#221815"
-            android:textSize="24sp"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:divider="@drawable/vseparator" />
 
         <TextView
@@ -60,9 +61,10 @@
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:paddingTop="7dp"
-            android:text="XXX"
+            android:text="cos.t"
             android:textColor="#221815"
-            android:textSize="24sp"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:divider="@drawable/vseparator" />
 
         <TextView
@@ -75,9 +77,10 @@
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:paddingTop="7dp"
-            android:text="xxx"
+            android:text="dis"
             android:textColor="#221815"
-            android:textSize="24sp"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:divider="@drawable/vseparator" />
 
 
