--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -32,9 +32,62 @@
             android:text="taxi"
             android:textColor="#221815"
             app:divider="@drawable/vseparator" />
-
-
-
+        <TextView
+            android:id="@+id/post_transport2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/post_distance"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingBottom="7dp"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+            android:paddingTop="7dp"
+            android:text="taxi"
+            android:textColor="#221815"
+            app:divider="@drawable/vseparator" />
+        <TextView
+            android:id="@+id/post_time2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/post_distance"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingBottom="7dp"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+            android:paddingTop="7dp"
+            android:text="taxi"
+            android:textColor="#221815"
+            app:divider="@drawable/vseparator" />
+        <TextView
+            android:id="@+id/post_cost2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/post_distance"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingBottom="7dp"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+            android:paddingTop="7dp"
+            android:text="taxi"
+            android:textColor="#221815"
+            app:divider="@drawable/vseparator" />
+        <TextView
+            android:id="@+id/post_distance2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/post_distance"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingBottom="7dp"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+            android:paddingTop="7dp"
+            android:text="taxi"
+            android:textColor="#221815"
+            app:divider="@drawable/vseparator" />
     </android.support.v7.widget.LinearLayoutCompat>
 
 
