--- a/app/src/main/res/layout/select_hotel.xml
+++ b/app/src/main/res/layout/select_hotel.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:hint="Search..."
         android:padding="20dp"
-        android:textColor="#221815"/>
+        android:textColor="#221815"
+        />
 
     <ListView
         android:id="@+id/ltSearch"
