--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -50,53 +50,60 @@
             android:textColor="#221815"
             android:textSize="18sp"
             app:divider="@drawable/vseparator" />
-        <TextView
-            android:id="@+id/post_time2"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/post_distance"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:paddingBottom="7dp"
-            android:paddingLeft="7dp"
-            android:paddingRight="7dp"
-            android:paddingTop="7dp"
-            android:text="taxi"
-            android:textColor="#221815"
-            android:textSize="18sp"
-            app:divider="@drawable/vseparator" />
+            android:orientation="horizontal"
+            app:divider="@drawable/vseparator"
+            app:showDividers="middle">
 
-        <TextView
-            android:id="@+id/post_cost2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/post_distance"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:paddingBottom="7dp"
-            android:paddingLeft="7dp"
-            android:paddingRight="7dp"
-            android:paddingTop="7dp"
-            android:text="taxi"
-            android:textColor="#221815"
-            android:textSize="18sp"
-            app:divider="@drawable/vseparator" />
+            <TextView
+                android:id="@+id/post_time2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:paddingBottom="7dp"
+                android:paddingLeft="7dp"
+                android:paddingRight="7dp"
+                android:paddingTop="7dp"
+                android:text="taxi"
+                android:textColor="#221815"
+                android:textSize="18sp"
+                android:divider="@drawable/vseparator" />
 
-        <TextView
-            android:id="@+id/post_distance2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/post_distance"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:paddingBottom="7dp"
-            android:paddingLeft="7dp"
-            android:paddingRight="7dp"
-            android:paddingTop="7dp"
-            android:text="taxi"
-            android:textColor="#221815"
-            android:textSize="18sp"
-            app:divider="@drawable/vseparator" />
+            <TextView
+                android:id="@+id/post_cost2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:paddingBottom="7dp"
+                android:paddingLeft="7dp"
+                android:paddingRight="7dp"
+                android:paddingTop="7dp"
+                android:text="taxi"
+                android:textColor="#221815"
+                android:textSize="18sp"
+                android:divider="@drawable/vseparator" />
+
+            <TextView
+                android:id="@+id/post_distance2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/post_distance"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:paddingBottom="7dp"
+                android:paddingLeft="7dp"
+                android:paddingRight="7dp"
+                android:paddingTop="7dp"
+                android:text="taxi"
+                android:textColor="#221815"
+                android:textSize="18sp"
+                app:divider="@drawable/vseparator" />
+        </LinearLayout>
+
     </android.support.v7.widget.LinearLayoutCompat>
 
 
