--- a/app/src/main/res/layout/view_time.xml
+++ b/app/src/main/res/layout/view_time.xml
@@ -38,8 +38,9 @@
         android:layout_below="@+id/textView9"
         android:layout_marginTop="18dp"
         android:text="Loading..."
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="18sp" />
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/timeExpress"
@@ -51,8 +52,9 @@
         android:layout_below="@+id/textView10"
         android:layout_marginTop="38dp"
         android:text="Loading..."
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="18sp" />
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView10"
