--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,112 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-    <TextView
 
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center"
-        android:layout_marginTop="64dp"
-        android:text="SEEM FYP"
-        android:textColor="#4a4a4a"
-        android:textSize="35sp" />
-
-    <!--TextView
-
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/main_frame"
+        android:layout_above="@id/bottom_navigation"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView2"
-        android:layout_gravity="center"
-        android:layout_marginTop="19dp"
-        android:padding="20dp"
-        android:text="Description
-(eg: This is an app for travellers to find the suitable hotel for them with transport options)"
-        android:textColor="#4a4a4a"
-        android:textSize="16sp"
-        android:textStyle="bold" /-->
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:drawable="@android:drawable/ic_menu_search"
-        android:background="@drawable/buttonshape"
-        android:onClick="searchActivity"
-        android:text="start search"
-        android:textColor="#ffffff"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        >
 
-    <EditText
-        android:id="@+id/text_destination"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Your destination"
-        android:textColor="#4a4a4a"
-        android:layout_below="@+id/textView3"
-        android:layout_toRightOf="@+id/textView4"
-        android:layout_alignRight="@+id/textView3"
-        android:layout_alignEnd="@+id/textView3" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
-        android:text="From: Hong Kong International Airport"
-        android:textColor="#4a4a4a"
-        android:textSize="18sp" />
+    </FrameLayout>
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="To:"
-        android:textColor="#4a4a4a"
-        android:textSize="18sp"
-        android:layout_alignBaseline="@+id/text_destination"
-        android:layout_alignBottom="@+id/text_destination"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_alignStart="@+id/textView3" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button3"
-        android:layout_alignEnd="@+id/textView2"
-        android:layout_alignRight="@+id/textView2"
-        android:layout_marginBottom="34dp"
-        android:background="@drawable/buttonshape"
-        android:text="Button"
-        android:textColor="@color/cardview_light_background" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="92dp"
-        android:background="@drawable/buttonshape"
-        android:text="Button"
-        android:textColor="@color/cardview_light_background" />
+        android:layout_alignParentStart="true"
+
+        app:menu="@menu/bottom_menu">
+
+    </android.support.design.widget.BottomNavigationView>
+
 
 </RelativeLayout>
