--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -11,8 +11,8 @@
         <com.github.chrisbanes.photoview.PhotoView
             android:id="@+id/photo_view"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_gravity="center_horizontal|center" />
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical|center_horizontal|center" />
     </LinearLayout>
 
 </FrameLayout>
