--- a/app/src/main/res/layout/fragment_route.xml
+++ b/app/src/main/res/layout/fragment_route.xml
@@ -1,16 +1,16 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.cuhk.seem.fyp.RouteFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
 
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
 
@@ -30,52 +30,70 @@
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:layout_gravity="center"
-            android:drawable="@android:drawable/ic_menu_search"
             android:background="@drawable/buttonshape"
+            android:drawable="@android:drawable/ic_menu_search"
             android:onClick="searchActivity"
             android:text="start search"
-            android:textColor="#ffffff"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+            android:textColor="#ffffff" />
 
         <EditText
             android:id="@+id/text_destination"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Your destination"
-            android:textColor="#4a4a4a"
+            android:layout_alignEnd="@+id/textView3"
             android:layout_below="@+id/textView3"
-            android:layout_toRightOf="@+id/textView4"
-            android:layout_alignRight="@+id/textView3"
-            android:layout_alignEnd="@+id/textView3" />
+            android:layout_toEndOf="@+id/imageView"
+            android:ems="10"
+            android:gravity="center_vertical"
+            android:inputType="textPersonName"
+            android:padding="10dp"
+            android:text="Your destination"
+            android:textColor="#4a4a4a" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_below="@+id/textView2"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="18dp"
-            android:text="From: Hong Kong International Airport"
+            android:layout_marginEnd="46dp"
+            android:layout_marginTop="15dp"
+            android:gravity="center_vertical|center_horizontal"
+            android:paddingBottom="5dp"
+            android:text="Hong Kong International Airport"
             android:textColor="#4a4a4a"
             android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/textView4"
+        <ImageView
+            android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="To:"
-            android:textColor="#4a4a4a"
-            android:textSize="18sp"
-            android:layout_alignBaseline="@+id/text_destination"
             android:layout_alignBottom="@+id/text_destination"
-            android:layout_alignLeft="@+id/textView3"
-            android:layout_alignStart="@+id/textView3" />
+            android:layout_alignStart="@+id/imageView2"
+            android:src="@drawable/ic_origin" />
 
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/text_destination"
+            android:layout_marginEnd="7dp"
+            android:layout_toStartOf="@+id/textView3"
+            android:src="@drawable/ic_destinationicon" />
 
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="20dp"
+            android:layout_height="40dp"
+            android:layout_alignStart="@+id/imageView"
+            android:layout_alignTop="@+id/textView3"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="16dp"
+            android:layerType="software"
+            android:src="@drawable/vertical_dashed_line" />
 
 
     </RelativeLayout>
